# polaris

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.rst  satellite.rst
polaris/: __init__.py  orbital_dynamics.py  satellite.py
polaris/orbit_propagation/: integrators.py
tests/: test_polaris.py  test_satellite.py
