[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris"
version = "0.1.0"
description = "Initial build of Polaris"
authors = [
    { name = "Atilla Saadat", email = "atilla.saadat@mail.utoronto.ca" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
