[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris"
version = "0.1.0"
description = "Initial build of Polaris"
authors = [
    { name = "Atilla Saadat", email = "atillaabc@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["keyword1", "keyword2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["polaris"]
