[metadata]
name = polaris
version = 0.1.0
description = Initial build of Polaris
author = Atilla Saadat
author_email = atilla.saadat@mail.utoronto.ca
license = MIT
readme = README.md
requires-python = >=3.8

[options]
packages = find:
install_requires =
    # Add any dependencies here, e.g., requests

[options.packages.find]
where = polaris
