[metadata]
name = python-polaris
version = 0.1.0
description = Initial build of Polaris
author = Atilla Saadat
author_email = atillaabc@gmail.com
license = MIT
readme = README.md
requires-python = >=3.8

[options]
packages = find:
install_requires =
    # Add any dependencies here, e.g., requests

[options.packages.find]
where = polaris
